Fixed "load more" and "horizontal scrolling" issue with newsfeed

--- a/service/web/assets/stylesheets/newsfeed.less
+++ b/service/web/assets/stylesheets/newsfeed.less
@@ -1,7 +1,7 @@
 
 @SM_BG_COLOR: transparent;
 @SM_GREEN: #67b000;
-@SM_IMAGE_WIDTH: 90%;
+@SM_IMAGE_WIDTH: 94%;
 
 body {
     background: @SM_BG_COLOR;
@@ -12,10 +12,12 @@ body {
     margin-top: 10px;
 
     .more {
+      clear: both;
       color: @SM_GREEN;
       text-align: center;
       cursor: pointer;
-      padding-bottom: 20px;
+      padding: 10px;
+      font-weight: bold;
 
       a {
         text-decoration: none;
@@ -34,6 +36,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    position: absolute;
+    width: 97%;
 
     li {
         clear: both;
@@ -44,7 +48,7 @@ ul {
         background: #fff;
         box-shadow: 0px 0px 6px #888;
         border-radius: 4px;
-        width: 90%;
+        /*width: 90%;*/
 
 
         .row {
